--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -327,7 +327,6 @@ footer i:hover {
   color: #EFFFE9; }
 
 .title {
-  text-transform: uppercase;
   font-family: NarzissRegular-Drops;
   margin: 0 0 0 20vw; }
 
@@ -362,7 +361,8 @@ footer i:hover {
   justify-content: center; }
 
 .about-me-copy {
-  width: 80%; }
+  width: 80%;
+  line-height: 1.5; }
 
 .aleia-intro {
   font-family: "Montserrat", sans-serif;
@@ -390,8 +390,7 @@ footer i:hover {
   line-height: 2; }
 
 .bio-copy {
-  width: 90%;
-  line-height: 1.5; }
+  width: 90%; }
 
 .spacer-b {
   background-color: #2EC4B6;
@@ -416,6 +415,91 @@ footer i:hover {
   color: #011627;
   font-size: 1.5rem;
   margin: 1rem 0; }
+
+.subpage-container figure {
+  margin: 2.5% 0; }
+
+.subpage-container figure img {
+  width: 100%; }
+
+.figure-duo img {
+  width: 95%;
+  height: auto;
+  display: flex;
+  display: -webkit-flex;
+  align-content: space-around; }
+
+.dev-tagline,
+.flex-copy {
+  margin: 1rem 0; }
+
+/* ==========================================================================
+   PACKAGES
+   ========================================================================== */
+.packages-main {
+  display: flex;
+  display: -webkit-flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-around; }
+
+.packages-wrapper {
+  width: 80%; }
+
+.small-spacer {
+  width: 100%;
+  height: .25rem; }
+
+.packages-header {
+  margin: 1rem 0; }
+
+.packages-intro {
+  font-family: NarzissRegular-Drops;
+  color: #011627;
+  font-size: 3rem; }
+
+.packages-header-wrapper {
+  display: flex;
+  display: -webkit-flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: center; }
+
+/* ==========================================================================
+   PACKAGES CARD STYLES
+   ========================================================================== */
+.card {
+  background-color: white;
+  margin: 2rem 0;
+  border-radius: 10px; }
+
+.card-title {
+  background-color: #011627;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  padding: 40% 0 20% 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 2rem;
+  color: #EFFFE9;
+  border-radius: 10px 10px 0 0; }
+
+.card-copy {
+  padding: 2rem;
+  line-height: 1.25; }
+
+.card-tags {
+  font-size: .75em;
+  font-family: "Montserrat Light", sans-serif; }
+
+.card-description {
+  margin: 5% 0; }
+
+.cost {
+  font-family: "Montserrat", sans-serif;
+  weight: bold;
+  color: #2EC4B6; }
 
 /* ==========================================================================
    Helper classes
@@ -489,7 +573,20 @@ footer i:hover {
 @media only screen and (min-width: 768px) {
   /* Style adjustments for viewports that meet the condition */
   .logo {
-    width: 10%; } }
+    width: 10%; }
+
+  .subpage-container figure img {
+    width: 50%;
+    height: auto; }
+
+  .duo {
+    display: flex;
+    display: -webkit-flex;
+    flex-wrap: nowrap;
+    justify-content: space-around; }
+
+  .duo figure img {
+    width: 95%; } }
 @media only screen and (min-width: 1280px) {
   footer {
     padding: .5em 0; }
