--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -526,7 +526,8 @@ footer i:hover {
    PORTFOLIO
    ========================================================================== */
 .portfolio-wrapper {
-  width: 80%; }
+  width: 80%;
+  margin: 2rem 0; }
 
 .portfolio-main {
   display: flex;
@@ -546,10 +547,20 @@ footer i:hover {
     margin: 0 0 1rem 0; }
 
 .portfolio-content {
-  padding: 1rem; }
+  padding: 1rem;
+  display: none; }
   .portfolio-content .content-title {
     font-family: "Montserrat", sans-serif;
-    font-size: 1.25rem; }
+    font-size: 1.25rem;
+    line-height: 2; }
+
+.content figure {
+  margin: 5% 0;
+  width: 90%; }
+
+.content-description {
+  line-height: 1.25;
+  margin: 0 0 1.5rem 0; }
 
 /* ==========================================================================
    PROCESS
@@ -770,6 +781,10 @@ footer i:hover {
   .packages-button p {
     padding: 1.25% 2.5%; }
 
+  .content figure {
+    margin: 2.5% 0;
+    width: 50%; }
+
   .not-found-main {
     padding: 2vh 4vh; } }
 @media only screen and (min-width: 1280px) {
@@ -815,6 +830,10 @@ footer i:hover {
 
   .packages-header-wrapper p {
     width: 70%; }
+
+  .content figure {
+    margin: 2.5% 0;
+    width: 40%; }
 
   .not-found-main {
     padding: 2vh 8vh; } }
