--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -264,6 +264,10 @@ body{
   color: $dark-accent;    
   font-size: 1.2rem;
 }
+
+.hero-tagline a:hover{
+  color: $light-accent;
+}
 /* ==========================================================================
    Main Body
    ========================================================================== */
